# happy-harmony

./: .gitignore  LICENSE  README.md  build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
Stage/: oh-package-lock.json5  oh-package.json5
Stage/src/main/: module.json5
Stage/src/main/cpp/: CMakeLists.txt  napi_init.cpp
Stage/src/main/cpp/types/libstage/: Index.d.ts  oh-package.json5
Stage/src/main/ets/api/: rest.ets  serverConfig.ets
Stage/src/main/ets/common/constants/: spacing.ets
Stage/src/main/ets/common/crypto/: aesGcm.ets  base64.ets  deriveKey.ets  encryptBox.ets  hmacSha512.ets  libsodium.ets  secretKeyBackup.ets
Stage/src/main/ets/pages/: HomePage.ets  Index.ets  LoginPage.ets
Stage/src/main/ets/service/auth/: authChallenge.ets  authGetToken.ets  authQR.ets  authStore.ets
Stage/src/main/ets/service/session/: sessionDecrypt.ets  sessionList.ets
Stage/src/main/ets/storage/: credentials.ets
Stage/src/main/ets/webrtc/: loopback.ets
Stage/src/main/resources/base/element/: color.json  string.json
Stage/src/main/resources/dark/element/: color.json
Stage/src/main/resources/rawfile/: box.json  secretbox.json
Stage/src/mock/: mock-config.json5
docs/: 00-livekit-webrtc-feasibility.md  01-libsodium-feasibility.md  progress.md
scripts/: build.sh  setup-signing.sh
scripts/hooks/: install.sh  pre-commit
tests/vectors/: box.json  generate.mjs  runner.ets  secretbox.json  sign.json
